force-app/main/default/objects/mappmct__engage_integration__c/mappmct__engage_integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>engage_integration</label>
</CustomObject>