force-app/main/default/objects/mappmct__engage_integration__c/fields/mappmct__api_url__c.field-meta.xml
<CustomField>
    <fullName>mappmct__api_url__c</fullName>
    <label>api_url</label>
    <type>Url</type>
</CustomField>