force-app/main/default/objects/mappmct__engage_integration__c/fields/mappmct__connection_status__c.field-meta.xml
<CustomField>
    <fullName>mappmct__connection_status__c</fullName>
    <label>connection_status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>