force-app/main/default/objects/mappmct__engage_integration__c/fields/mappmct__integration_id__c.field-meta.xml
<CustomField>
    <fullName>mappmct__integration_id__c</fullName>
    <label>integration_id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>