force-app/main/default/objects/mappmct__engage_integration__c/fields/mappmct__lead_group__c.field-meta.xml
<CustomField>
    <fullName>mappmct__lead_group__c</fullName>
    <label>lead_group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>