force-app/main/default/objects/mappmct__engage_integration__c/fields/mappmct__secret__c.field-meta.xml
<CustomField>
    <fullName>mappmct__secret__c</fullName>
    <label>secret</label>
    <length>200</length>
    <type>Text</type>
</CustomField>